Fixed padding in hero on mobile

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -189,6 +189,7 @@ p {
 
   @media screen and (max-width: 992px) {
     padding-top: 98%;
+    padding-bottom: 13rem;
   }
 
   .row {
